--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ant-design-pro",
+  "name": "ant-blog-go-react-admin",
   "version": "2.3.1",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
